<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_timer"
        android:icon="@drawable/ic_alarm_white_24dp"
        android:orderInCategory="100"
        android:title="@string/timer"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_credits"
        android:orderInCategory="104"
        android:title="@string/credits"/>

    <item
        android:id="@+id/menu_share"
        android:orderInCategory="101"
        android:title="@string/share"/>

    <item
        android:id="@+id/menu_feedback"
        android:orderInCategory="102"
        android:title="@string/feedback"/>

    <item
        android:id="@+id/menu_premium"
        android:orderInCategory="103"
        android:title="@string/premium_action"/>

    <item
        android:id="@+id/menu_purchase"
        android:orderInCategory="105"
        android:title="@string/upgrade" />

</menu>