<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:focusableInTouchMode="true"
    tools:context="za.co.twinc.colorsofnoise.MainActivity">

    <include layout="@layout/loading_indicator"/>

    <ScrollView
        android:id="@+id/screen_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

            <ImageView
                android:id="@+id/spectrum_imageView"
                android:contentDescription="@string/spectrum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/red"/>

            <TextView
                android:id="@+id/textView"
                android:text="@string/red_txt"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/spectrum_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/quick_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/textView"
                android:padding="8dp"
                >
                <Button
                    android:id="@+id/white_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onButtonWhiteClick"
                    android:text="@string/white_button" />
                <Button
                    android:id="@+id/pink_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onButtonPinkClick"
                    android:text="@string/pink_button" />
                <Button
                    android:id="@+id/red_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onButtonRedClick"
                    android:text="@string/red_button" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/play_button"
                android:layout_below="@id/quick_buttons"
                android:contentDescription="@string/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="onButtonPlayClick"
                android:src="@android:drawable/ic_media_play"
                />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_below="@id/quick_buttons"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/fab_margin"
                ads:srcCompat="@android:drawable/ic_dialog_info" />

            <SeekBar
                android:id="@+id/volume_seekBar"
                android:progress="80"
                android:layout_below="@id/fab"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/why_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/volume_seekBar"
                android:layout_alignParentEnd="true"
                android:onClick="onButtonAdsClick"
                android:text="@string/button_why_ads"
                android:visibility="invisible"
                style="?android:attr/borderlessButtonStyle"/>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/why_ads"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                ads:adSize="MEDIUM_RECTANGLE"
                ads:adUnitId="@string/ad_unit_id"/>

            <TextView
                android:id="@+id/textTimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/volume_seekBar"
                android:layout_centerHorizontal="true"
                android:background="@drawable/timer_background"
                android:paddingHorizontal="16dp"
                android:paddingVertical="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/start_time"
                android:textAlignment="center"
                android:textColor="@color/background"
                android:textSize="32sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </RelativeLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
